--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,6 +2,7 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 // Personnalisation & import de Bulma
-$primary: #5651FF;
+$primary: #0219A1;
+$light  : #a8b2ea;
 @import "~bulma";
 
