CREATION de la page de connexion + formulaire inscription
- Modification LoginFormAuthenticator.php
- Créer le fichier security/register.html.twig
- Supprimer le dossier registration qui contient
register.html.twig
- Dans le fichier RegistrationController prendre la fonction
register et la copier dans SecurityController. Ensuite supprimer
le fichier RegistrationController.
- Modifier le formulaire Form/RegistrationFormType.php
- Création de la fonction function logoutMessage dans
Security controller

--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -43,16 +43,16 @@
                                 <span class="icon"><i class="fas fa-user-circle"></i></span>
                                 <span><strong>{{app.user.username}}</strong></span>
                             </a>
-                            <a class="button is-light is-small" href="">
+                            <a class="button is-light is-small" href="{{ path('app_logout_message') }}">
                                 <i class="fas fa-sign-out-alt"></i>
                             </a>
                         {% else %}
-                            <a class="button is-primary is-small" href="">
+                            <a class="button is-primary is-small" href="{{ path('inscription') }}">
                                 <strong>
                                     Inscription
                                 </strong>
                             </a>
-                            <a class="button is-light is-small" href="">
+                            <a class="button is-light is-small" href="{{ path('app_login') }}">
                                 Connexion
                             </a>
                         {% endif %}
