CREE la partie suppression,modification,liste users pour ADMIN + Modification de l’entité AvisProduit et AvisAssureur pour pouvoir supprimer un user @ORM\JoinColumn(nullable=true, onDelete="SET NULL")

--- a/templates/_admin_template.html.twig
+++ b/templates/_admin_template.html.twig
@@ -26,7 +26,7 @@
                 <a class="navbar-item" href="">
                     Catégories
                 </a>
-                <a class="navbar-item" href="">
+                <a class="navbar-item" href="{{ path('admin_user_list') }}">
                     Utilisateurs
                 </a>
                 <a class="navbar-item" href="">
