CREE le CRUD de l'entite Categorie (pour ADMIN)

--- a/templates/_admin_template.html.twig
+++ b/templates/_admin_template.html.twig
@@ -23,7 +23,7 @@
                 <a class="navbar-item" href="{{ path('admin_produit_liste') }}">
                     Produits
                 </a>
-                <a class="navbar-item" href="">
+                <a class="navbar-item" href="{{ path('admin_categorie_liste') }}">
                     Catégories
                 </a>
                 <a class="navbar-item" href="{{ path('admin_user_list') }}">
