CREE CRUD Gestion(listing,ajout,delete,modification) pour ADMIN

--- a/templates/_admin_template.html.twig
+++ b/templates/_admin_template.html.twig
@@ -26,6 +26,9 @@
                 <a class="navbar-item" href="{{ path('admin_categorie_liste') }}">
                     Catégories
                 </a>
+                <a class="navbar-item" href="{{ path('admin_gestion_liste') }}">
+                    Types de gestion
+                </a>
                 <a class="navbar-item" href="{{ path('admin_user_list') }}">
                     Utilisateurs
                 </a>
