--- a/templates/admin_gestion/add.html.twig
+++ b/templates/admin_gestion/add.html.twig
@@ -1,14 +1,14 @@
 {% extends '_admin_template.html.twig' %}
 
-{% block title %}Nouvelle Catégorie{% endblock %}
+{% block title %}Nouveau type de Gestion{% endblock %}
 
 {% block content %}
     <div class="section">
-        <h1 class="title has-text-centered">Nouvelle Catégorie</h1>
+        <h1 class="title has-text-centered">Nouveau type de Gestion</h1>
         <div class="columns">
             <div class="column"></div>
             <div class="column is-one-third">
-                {% include 'admin_categorie/_categorie_form.html.twig' %}
+                {% include 'admin_gestion/_gestion_form.html.twig' %}
             </div>
             <div class="column"></div>
         </div>
