CREE CRUD Assureur (listing,ajout,suppression,modification)

--- a/templates/_admin_template.html.twig
+++ b/templates/_admin_template.html.twig
@@ -29,7 +29,10 @@
                 <a class="navbar-item" href="{{ path('admin_gestion_liste') }}">
                     Types de gestion
                 </a>
-                <a class="navbar-item" href="{{ path('admin_user_list') }}">
+                <a class="navbar-item" href="{{ path('admin_assureur_liste') }}">
+                    Assureurs
+                </a>
+                <a class="navbar-item" href="{{ path('admin_user_liste') }}">
                     Utilisateurs
                 </a>
                 <a class="navbar-item" href="">
