--- a/templates/admin_assureur/delete.html.twig
+++ b/templates/admin_assureur/delete.html.twig
@@ -1,19 +1,20 @@
 {% extends "_admin_template.html.twig" %}
 
 {% block title %}
-    Suppression {{ produit.titre }}
+    Supprimer l'assureur {{ assureur.nom }}
 {% endblock %}
 
 {% block content %}
     <div class="section">
-        <h1 class="title has-text-centered">Supprimer le produit d'assurance-vie : {{ produit.titre }}</h1>
+        <h1 class="title has-text-centered">Supprimer l'assureur : "{{ assureur.nom }}"</h1>
+
         <div class="columns">
             <div class="column"></div>
             <div class="column is-half">
                 {{ form_start(deleteForm) }}
 
                 {{ form_row(deleteForm.confirmation, {
-                    label: 'Je confirme la suppression du produit.'
+                    label: 'Je confirme la suppression de l\'assureur "' ~ assureur.nom ~ '"'
                 }) }}
 
                 <button type="submit" class="button is-danger is-fullwidth">
@@ -24,5 +25,7 @@
             </div>
             <div class="column"></div>
         </div>
+
     </div>
 {% endblock %}
+
