--- a/templates/admin_user/liste.html.twig
+++ b/templates/admin_user/liste.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="section">
 
-        <h1 class="title">Liste des utilisateurs</h1>
+        <h1 class="title has-text-centered">Liste des utilisateurs</h1>
 
         {% include 'includes/flashes.html.twig' %}
 
