--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -48,9 +48,7 @@
                             </a>
                         {% else %}
                             <a class="button is-primary is-small" href="{{ path('inscription') }}">
-                                <strong>
-                                    Inscription
-                                </strong>
+                                <strong>Inscription</strong>
                             </a>
                             <a class="button is-light is-small" href="{{ path('app_login') }}">
                                 Connexion
