CREE le ProduitController pour User (affichage produits)

--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -28,7 +28,7 @@
                         <span>Back-Office</span>
                     </a>
                 {% endif %}
-                <a class="navbar-item" href="">
+                <a class="navbar-item" href="{{ path('produits') }}">
                     Voir tous les produits
                 </a>
 
