--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,6 +2,14 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 // Personnalisation & import de Bulma
-$primary: #0219A1;
-$light  : #a8b2ea;
+$primary                  : #0219A1;
+$light                    : #a8b2ea;
+$table-cell-padding       : 0.2em 0;
+$footer-background-color  : #a8b2ea;
+$footer-padding           : 3rem 1.5rem 3rem ;
+
 @import "~bulma";
+
+.liste-produits-admin {
+  font-size: 0.9em;
+}
