RAJOUTE la possibilité de mettre la photo du produit dans ADMIN

--- a/templates/admin_produit/_produit_form.html.twig
+++ b/templates/admin_produit/_produit_form.html.twig
@@ -38,6 +38,12 @@
                 {{ form_row(produitForm.creation,{
                     label : 'Disponible depuis'
                 }) }}
+                <div><strong> Image enregistrée comme logo:</strong></div>
+                {{ asset('uploads/images/' ~ produit.imageFilename) | default('Aucune image enregistrée') }}
+                <figure>
+                    <img width="200" src="{{ asset('uploads/images/' ~ produit.imageFilename) }}" alt="">
+                </figure>
+                {{ form_row(produitForm.image) }}
 <button type="submit" class="button is-success is-fullwidth">
     Enregistrer
 </button>
