CREE entite FondsEuro + CRUD Type relation : ManyToMany

--- a/templates/_admin_template.html.twig
+++ b/templates/_admin_template.html.twig
@@ -29,6 +29,9 @@
                 <a class="navbar-item" href="{{ path('admin_gestion_liste') }}">
                     Types de gestion
                 </a>
+                <a class="navbar-item" href="{{ path('admin_fonds_euro_liste') }}">
+                    Fonds en euros
+                </a>
                 <a class="navbar-item" href="{{ path('admin_assureur_liste') }}">
                     Assureurs
                 </a>
