--- a/templates/admin_produit/_produit_form.html.twig
+++ b/templates/admin_produit/_produit_form.html.twig
@@ -32,6 +32,9 @@
                 {{ form_row(produitForm.gestion,{
                     label : 'Gestion'
                 }) }}
+                {{ form_row(produitForm.fonds_euro,{
+                    label : 'Fonds Euros'
+                }) }}
                 {{ form_row(produitForm.label,{
                     label : 'Label'
                 }) }}
