--- a/templates/admin_produit/_produit_form.html.twig
+++ b/templates/admin_produit/_produit_form.html.twig
@@ -23,9 +23,6 @@
                 {{ form_row(produitForm.categorie,{
                     label : 'Catégorie de l\'produit'
                 }) }}
-                {{ form_row(produitForm.rendement,{
-                    label : 'Rendement'
-                }) }}
                 {{ form_row(produitForm.categorie,{
                     label : 'Catégorie'
                 }) }}
@@ -42,10 +39,12 @@
                     label : 'Disponible depuis'
                 }) }}
                 <div><strong> Image enregistrée comme logo:</strong></div>
-                {{ asset('uploads/images/' ~ produit.imageFilename) | default('Aucune image enregistrée') }}
+                {% if(produit is defined) %}
+                {{ produit.imageFilename | default('Aucune image enregistrée') }}
                 <figure>
                     <img width="200" src="{{ asset('uploads/images/' ~ produit.imageFilename) }}" alt="">
                 </figure>
+                {% endif %}
                 {{ form_row(produitForm.image) }}
 <button type="submit" class="button is-success is-fullwidth">
     Enregistrer
