--- a/templates/produit/liste.html.twig
+++ b/templates/produit/liste.html.twig
@@ -5,6 +5,6 @@
 {% block content %}
     <div class="section">
         <h1 class="title mt-4">Liste des produits : {{ list_produits|length }}</h1>
-        {% include "includes/produit_list.html.twig" with {produits: list_produits} %}
+        {% include "includes/produit_list.html.twig" with {produits: list_produits, meilleur_taux: meilleur_taux} %}
     </div>
 {% endblock %}
