MODIFIE la page template d'un produit:Caracteristiques principales

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -13,3 +13,7 @@ $footer-padding           : 3rem 1.5rem 3rem ;
 .liste-produits-admin {
   font-size: 0.9em;
 }
+
+//.affichage-page.section {
+//  padding: 0;
+//}
